src/test/ui/consts/const_let_assign3.stderr
error[E0019]: constant function contains unimplemented expression type
  --> $DIR/const_let_assign3.rs:9:9
   |
LL |         self.state = x;
   |         ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0019]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:16:5
   |
LL |     s.foo(3);
   |     ^ `&mut` is only allowed in `const fn`

error[E0019]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:22:13
   |
LL |     let y = &mut x;
   |             ^^^^^^ `&mut` is only allowed in `const fn`

error[E0019]: constant contains unimplemented expression type
  --> $DIR/const_let_assign3.rs:24:5
   |
LL |     *y = 42;
   |     ^^^^^^^
   |
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0019`.
